Added css file in static

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -49,15 +49,11 @@
                         <img class="portfolio-img" src="/static/img/blogpost.jpg">
                     </a>
                 </div>
-                <!-- <div class="index-bottom text-center">
+                <div class="index-bottom text-center">
                     <p>
-                        {% if lang == 'en' %}
-                            And <a target="_blank" class="about-link" href="">this way</a> to see more of my blog posts.
-                        {% else %}
-                            Und <a target="_blank" class="about-link" href="">hier</a> zu meinen anderen Blog Posts.
-                        {% endif %}
+                            And <a target="_blank" class="about-link" href="https://navrozlamba.com/blog-2/">this way</a> to see more of my blog posts.
                     </p>
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
