--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="row">
                     <a target="_blank" href="https://github.com/navroz-lamba/Portfolio-Website">
-                        <img class="portfolio-img" src="/static/img/portfolio-website.png">
+                        <img class="portfolio-img" src="/static/img/project1.png">
                     </a>
                 </div>
                 <div class="index-bottom text-center">
@@ -46,7 +46,7 @@
                 </div>
                 <div class="row">
                     <a target="_blank" href="https://navrozlamba.com/2020/07/29/king-of-the-skies/">
-                        <img class="portfolio-img" src="/static/img/blogpost.jpg">
+                        <img class="portfolio-img" src="/static/img/blogpost-1.png">
                     </a>
                 </div>
                 <div class="index-bottom text-center">
