Database connected to Heroku and it's working

--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -17,7 +17,7 @@
     <div class="timeline">
         <div class="container-timeline left">
             <div class="content">
-                    <h2>2016</h2>
+                    <h2>January</h2>
                         <p><a target="_blank" class="about-link" href="https://www.codecademy.com/learn/learn-python">Codecademy course</a>:
                             Python course with structured mini projects.
                         </p>
