Completed the About me page

--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -10,7 +10,7 @@
     <div class="row portfolio-row justify-content-center">
         <div class="col-md-5">
             <div class="text-center">
-                    <h2 class="about-header">My learning path</h2>
+                    <h2 class="about-header">My learning path 2020</h2>
             </div>
         </div>
     </div>
@@ -18,58 +18,48 @@
         <div class="container-timeline left">
             <div class="content">
                     <h2>January</h2>
-                        <p><a target="_blank" class="about-link" href="https://www.codecademy.com/learn/learn-python">Codecademy course</a>:
-                            Python course with structured mini projects.
+                        <p><a target="_blank" class="about-link" href="https://codewithmosh.com/p/python-programming-course-beginners">Complete Python Mastery</a>:
+                            Discover how to use Python in automation, web development and machine learning.
                         </p>
             </div>
         </div>
         <div class="container-timeline right">
             <div class="content">
-                    <h2>2018</h2>
+                    <h2>June - Present</h2>
                         <ul>
                             <li>
-                                <a target="_blank" class="about-link" href="https://www.edx.org/course/cs50s-introduction-to-computer-science">CS50's Intro to Computer Science</a>:
-                                HarvardX course with projects in C, HTML, CSS, JavaScript, Python and SQL.
-                            </li>
-                            <li>
-                                <a target="_blank" class="about-link" href="https://dash.generalassemb.ly/">General Assembly's Dash</a>:
-                                Web development course in HTML, CSS and JavaScript.
-                            </li>
-                            <li>
-                                <a target="_blank" class="about-link" href="https://www.udacity.com/course/intro-to-data-science--ud359">Udacity's Intro to Data Science</a>:
-                                Introduction to data wrangling, data analysis, data visualization and MapReduce in Python.
-                            </li>
-                            <li>
-                                <a target="_blank" class="about-link" href="https://www.udacity.com/course/data-wrangling-with-mongodb--ud032">Udacity's Data Wrangling with MongoDB</a>:
-                                Course on data extraction, incl. web scraping, data quality checking and MongoDB.
+                                <a target="_blank" class="about-link" href="https://lambdaschool.com/courses/data-science">Lambda School - Data Science</a>:
+                                An intensive online data science course for a 
+                                career in applied statistics and machine learning.
+
+                                Python | Linear Algebra | SQL | Databases | 
+                                Data Visualization | Statistics & Modeling | 
+                                Machine Learning | Natural Language Processing
+                                 
                             </li>
                         </ul>
             </div>
         </div>
         <div class="container-timeline left">
             <div class="content">
-                    <h2>2019</h2>
+                    <h2>August</h2>
                         <ul>
                             <li>
-                                <a target="_blank" class="about-link" href="https://www.udacity.com/course/data-scientist-nanodegree--nd025">Udacity's Data Scientist Nanodegree</a>:
-                                In 2019, this course also included <a target="_blank" class="about-link" href="https://www.udacity.com/course/machine-learning-engineer-nanodegree--nd009t">
-                                Udacity's Machine Learning Engineer Nanodegree</a>; Machine learning, deep learning, software
-                                and data engineering, recommendation systems.
+                                <a target="_blank" class="about-link" href="https://www.udemy.com/course/deployment-of-machine-learning-models/">Udemy - Deployement of Machine Learning Models</a>:
+                                Learn how to put your machine learning models into production.
                             </li>
-                            <li>
-                                Data Science Basics seminar as part of my Master's degree: Introduction to supervised ML
-                                and academic final project in time series forecasting.
-                            </li>
+  
                         </ul>
             </div>
         </div>
         <div class="container-timeline right">
             <div class="content">
-                    <h2>2020</h2>
-                        <p><a target="_blank" class="about-link" href="https://www.udacity.com/course/data-structures-and-algorithms-in-python--ud513">
-                            Udacity's Intro to Data Structures and Algorithms</a>:
+                    <h2>October - Present</h2>
+                        <p><a target="_blank" class="about-link" href="https://codewithmosh.com/p/data-structures-algorithms">
+                            The Ultimate Data Structures & Algorithms Course</a>:
                             Course on different algorithms and data structures, incl. time- and space-efficiency,
-                            search and sort algorithms, maps, hashing, trees and list-based collections.
+                            search and sort algorithms, linear data structures and their algorithms, 
+                            and non-linear data structures and their algorithms.
                         </p>
             </div>
         </div>
