--- a/portfolio/templates/layout.html
+++ b/portfolio/templates/layout.html
@@ -52,7 +52,7 @@
     <body>
 
         <nav class="navbar navbar-expand-md navbar-light bg-light border sticky-top">
-            <a class="navbar-brand" id="{{ id }}-navbarbrand" href="/en">Navroz Lamba</a>
+            <a class="navbar-brand" id="{{ id }}-navbarbrand" href="/">Navroz Lamba</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
