--- a/portfolio/templates/layout.html
+++ b/portfolio/templates/layout.html
@@ -64,11 +64,11 @@
                     <li class="nav-item">
                         <a class="nav-link" id="{{ id }}-nav-link" href="/portfolio">Portfolio</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a target="_blank" class="nav-link" id="{{ id }}-nav-link" href="https://medium.com/@julia.nikulski">Blog</a>
-                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" id="{{ id }}-nav-link" href="/about">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="{{ id }}-nav-link" href=https://drive.google.com/file/d/1akesp_cxFMqd11fNplQplixsc5881t7n/view?usp=sharing>Resume</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto mt-2">
