Added images to the portfolio page

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -40,13 +40,13 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="row index-img text-center">
-                        <h6>Airbus, the new king of the Skies?!
+                        <h6>Airbus, the new king of the Skies?! | Data Storytelling
                         </h6>
                     </div>
                 </div>
                 <div class="row">
                     <a target="_blank" href="https://navrozlamba.com/2020/07/29/king-of-the-skies/">
-                        <img class="portfolio-img" src="/static/img/blogpost-1.png">
+                        <img class="portfolio-img" src="/static/img/project6.png">
                     </a>
                 </div>
                 <div class="index-bottom text-center">
