--- a/portfolio/templates/layout.html
+++ b/portfolio/templates/layout.html
@@ -75,9 +75,9 @@
                     <li class="nav-item">
                         <a target="_blank" class="nav-link" id="{{ id }}-nav-link" href="https://github.com/navroz-lamba">GitHub</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a target="_blank" class="nav-link" id="{{ id }}-nav-link" href="https://www.kaggle.com/juliajemals">Kaggle</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a target="_blank" class="nav-link" id="{{ id }}-nav-link" href="https://twitter.com/Navroz21">Twitter</a>
+                    </li>
                     <li class="nav-item">
                         <a target="_blank" class="nav-link" id="{{ id }}-nav-link" href="https://www.linkedin.com/in/navroz-lamba-92a77792/">LinkedIn</a>
                     </li>
@@ -121,3 +121,4 @@
     </body>
 
 </html>
+
