--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -10,7 +10,7 @@
     <div class="row portfolio-row justify-content-center">
         <div class="col-md-5">
             <div class="text-center">
-                    <h2 class="about-header">My learning path 2020</h2>
+                    <h2 class="about-header">My learning path to becoming a Data Scientist 2020</h2>
             </div>
         </div>
     </div>
