made changes to the layout.html

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -17,11 +17,11 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="row index-img text-center">
-                        <h6>How to Build a Data Science Portfolio Website</h6>
+                        <h6>Movie Recommender System with Sentiment Analysis</h6>
                     </div>
                 </div>
                 <div class="row">
-                    <a target="_blank" href="https://github.com/navroz-lamba/Portfolio-Website">
+                    <a target="_blank" href="https://github.com/navroz-lamba/Movie-Recommender-System-with-Sentiment-Analysis">
                         <img class="portfolio-img" src="/static/img/project1.png">
                     </a>
                 </div>
@@ -45,13 +45,13 @@
                     </div>
                 </div>
                 <div class="row">
-                    <a target="_blank" href="https://navrozlamba.com/2020/07/29/king-of-the-skies/">
+                    <a target="_blank" href="https://lamba-navroz.medium.com/airbus-the-new-king-of-the-skies-64159fb6e95e">
                         <img class="portfolio-img" src="/static/img/project6.png">
                     </a>
                 </div>
                 <div class="index-bottom text-center">
                     <p>
-                            And <a target="_blank" class="about-link" href="https://navrozlamba.com/blog-2/">this way</a> to see more of my blog posts.
+                            And <a target="_blank" class="about-link" href="https://lamba-navroz.medium.com/">this way</a> to see more of my blog posts.
                     </p>
                 </div>
             </div>
