--- a/portfolio/templates/layout.html
+++ b/portfolio/templates/layout.html
@@ -26,17 +26,6 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-        <!-- Global site tag (gtag.js) - Google Analytics
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168103075-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'UA-168103075-1', {'anonymize_ip': true });
-        </script> -->
-
-
         <!-- Disallow crawlers to index this website -->
         <meta name="robots" content="noindex">
 
@@ -81,11 +70,10 @@
                     <li class="nav-item">
                         <a target="_blank" class="nav-link" id="{{ id }}-nav-link" href="https://www.linkedin.com/in/navroz-lamba-92a77792/">LinkedIn</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <form method="post">
-                            <button type="submit" name="lang" class="btn" id="{{ id }}-btn-lang" value="de">DE</button>
-                        </form>
-                    </li> -->
+                    <li class="nav-item">
+                        <a target="_blank" class="nav-link" id="{{ id }}-nav-link" href="https://lamba-navroz.medium.com/">Medium</a>
+                    </li>
+                    
                 </ul>
             </div>
         </nav>
@@ -112,8 +100,6 @@
         </main>
 
         <footer class="small text-center text-muted">
-            <!-- <a href="/en/impressum" class="text-dark">Legal Notice</a> |
-            <a href="/en/datenschutz" class="text-dark">Privacy</a> -->
             <p class="copyright">Copyright &copy; 2020 | Navroz Lamba</p>
         </footer>
 
