made changes to index file to display the recommender system app

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -21,7 +21,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <a target="_blank" href="https://github.com/navroz-lamba/Movie-Recommender-System-with-Sentiment-Analysis">
+                    <a target="_blank" href="https://movies-u-like.herokuapp.com/">
                         <img class="portfolio-img" src="/static/img/project1.png">
                     </a>
                 </div>
