made changes to index file to display the recommender system app

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="index-bottom text-center">
                     <p>
-                            <a class="about-link" href="/portfolio">This way</a> to see more of my projects.
+                            <a class="about-link" href="/portfolio">This way</a> to see more of my projects along with the code
                     </p>
                 </div>
             </div>
