changed the about me page

--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -10,14 +10,14 @@
     <div class="row portfolio-row justify-content-center">
         <div class="col-md-5">
             <div class="text-center">
-                    <h2 class="about-header">My learning path to becoming a Data Scientist 2020</h2>
+                    <h2 class="about-header">My learning path to becoming a Data Scientist</h2>
             </div>
         </div>
     </div>
     <div class="timeline">
         <div class="container-timeline left">
             <div class="content">
-                    <h2>January</h2>
+                    
                         <p><a target="_blank" class="about-link" href="https://codewithmosh.com/p/python-programming-course-beginners">Complete Python Mastery</a>:
                             Discover how to use Python in automation, web development and machine learning.
                         </p>
@@ -25,7 +25,7 @@
         </div>
         <div class="container-timeline right">
             <div class="content">
-                    <h2>June - Present</h2>
+                    
                         <ul>
                             <li>
                                 <a target="_blank" class="about-link" href="https://lambdaschool.com/courses/data-science">Lambda School - Data Science</a>:
@@ -42,7 +42,7 @@
         </div>
         <div class="container-timeline left">
             <div class="content">
-                    <h2>August</h2>
+                    
                         <ul>
                             <li>
                                 <a target="_blank" class="about-link" href="https://www.udemy.com/course/deployment-of-machine-learning-models/">Udemy - Deployement of Machine Learning Models</a>:
@@ -54,7 +54,7 @@
         </div>
         <div class="container-timeline right">
             <div class="content">
-                    <h2>October - Present</h2>
+                    
                         <p><a target="_blank" class="about-link" href="https://codewithmosh.com/p/data-structures-algorithms">
                             The Ultimate Data Structures & Algorithms Course</a>:
                             Course on different algorithms and data structures, incl. time- and space-efficiency,
