Added Lambda School credentials to the about me page

--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -26,30 +26,29 @@
         <div class="container-timeline right">
             <div class="content">
                     
-                        <ul>
-                            <li>
-                                <a target="_blank" class="about-link" href="https://lambdaschool.com/courses/data-science">Lambda School - Data Science</a>:
-                                An intensive online data science course for a 
-                                career in applied statistics and machine learning.
-                                <br>
-                                Python | Linear Algebra | SQL | Databases | 
-                                Data Visualization | Statistics & Modeling | 
-                                Machine Learning | Natural Language Processing
-                                 
-                            </li>
-                        </ul>
+                        <p><a target="_blank" class="about-link" href="https://lambdaschool.com/courses/data-science">Lambda School - Data Science</a>:
+                            An intensive online data science course for a 
+                            career in applied statistics and machine learning.
+                            <br>
+                            <br>
+                            Python | Linear Algebra | SQL | Databases | 
+                            Data Visualization | Statistics & Modeling | 
+                            Machine Learning | Natural Language Processing
+                            <br>
+                            <br>
+                            <a target="_blank" class="about-link" href="https://www.youracclaim.com/badges/37241836-f998-4f7b-bfbf-6c140b24c25d?source=linked_in_profile">See credential</a>
+                        </p>
+
             </div>
         </div>
         <div class="container-timeline left">
             <div class="content">
                     
-                        <ul>
-                            <li>
-                                <a target="_blank" class="about-link" href="https://www.udemy.com/course/deployment-of-machine-learning-models/">Udemy - Deployement of Machine Learning Models</a>:
-                                Learn how to put your machine learning models into production.
-                            </li>
-  
-                        </ul>
+
+                        <p><a target="_blank" class="about-link" href="https://www.udemy.com/course/deployment-of-machine-learning-models/">Udemy - Deployement of Machine Learning Models</a>:
+                            Learn how to put your machine learning models into production.
+                        </p>
+
             </div>
         </div>
         <div class="container-timeline right">
